--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,13 @@ html {
   --light-grey: #93a8b3;
   --dark-blue: #0a0f28;
 }
-a,
+a {
+  color: inherit;
+  text-decoration: none;
+}
 a:hover,
 a:focus {
+  color: white;
   text-decoration: none;
 }
 ::-webkit-scrollbar {
@@ -296,7 +300,7 @@ aside {
 }
 .image-container {
   width: 10rem;
-  height: auto;
+  height: 10rem;
   margin-right: 1rem;
 }
 .latest-artist {
@@ -544,33 +548,30 @@ aside .navbar-fixed .left {
   margin-right: 1rem;
   font-weight: 600;
 }
-#sidebar-main {
+.sidebar-main {
   margin-top: 2rem;
   padding-left: 1rem;
 }
-#sidebar-main .count {
-  font-size: 0.8rem;
+.sidebar-main .count {
+  font-size: 0.9rem;
 }
-#sidebar-main .image-container {
-  width: 5rem;
+.song .image-container {
+  width: 4rem;
+  height: 4rem;
   border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
 }
-#sidebar-main .right {
+.song .right {
   align-self: center;
   position: relative;
 }
-#sidebar-main div.name.d-flex {
-  flex-direction: column;
-  align-items: flex-start;
-}
 .singer-name {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   line-height: 0.6;
   color: #8fa4af;
 }
 .song-name {
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 .current-playing .material-icons-round {
   color: #1fb7d8;
@@ -584,10 +585,11 @@ aside .navbar-fixed .left {
 =============================================*/
 
 .hero {
-  background-color: #202240;
+  background-color: #121a3f;
   box-shadow: #090e27 0px 4px 12px;
   justify-content: space-between;
   height: 30rem;
+  border-radius: 2px;
 }
 .hero .image-container {
   position: relative;
@@ -602,19 +604,129 @@ aside .navbar-fixed .left {
   left: 0;
   height: 100%;
   width: 100%;
-  background: linear-gradient(180deg, rgba(0,0,0,0) 30%, rgba(32,34,64,1) 85%);
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    #121a3f 95%
+  );
 }
 .hero > .left {
   height: 100%;
   width: 40%;
 }
 .hero > .right {
-  height: 100%;
+  padding-right: 2rem;
+  color: #b1b2bd;
+  height: 75%;
   width: 55%;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.hero .heading {
+  width: 100%;
+  justify-content: space-between;
+}
+.heading .artist-name {
+  font-size: 2rem;
+  color: white;
+  font-weight: bolder;
+  line-height: 1.5;
+}
+.bold {
+  font-weight: bold;
+}
+.description {
+  margin-top: 1rem;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+}
+.controls {
+  margin-top: 3.5rem;
+  margin-bottom: 1rem;
+}
+.controls button {
+  padding: 0.8rem;
+  width: 13rem;
+  border-radius: 0%;
+  margin-right: 0.5rem;
+  border: 0px;
+  color: #ffffff;
+  background: transparent;
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.btn:hover,
+.btn:focus {
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0.2rem white;
+}
+.controls button:first-child {
+  background: linear-gradient(to right, #e040fb, #00bcd4);
+}
+.songs {
+  color: white;
+}
+.tracks {
+  margin-right: 0.5rem;
+  padding-right: 0.5rem;
+  letter-spacing: 1px;
+  border-right: 2px solid white;
+}
+/*=====  End of Hero section  ======*/
+
+/*=============================================
+=            All Songs section            =
+=============================================*/
+
+.all-songs {
+  flex-direction: column;
+  margin-top: 1rem;
+}
+.all-songs .song {
+  background-color: #222434;
+  width: 100%;
+  padding: 1rem;
+  padding-right: 4rem;
+  transition: 0.3s ease-in-out;
+}
+.all-songs .song:hover,
+.all-songs .song:focus {
+  background-color: #27293a;
+  box-shadow: #090e27 0px 4px 12px;
+}
+.all-songs .favourite::after {
+  margin-right: 2rem;
+}
+.song .name {
   flex-direction: column;
   align-items: flex-start;
 }
-/*=====  End of Hero section  ======*/
+/*=====  End of All Songs section  ======*/
+
+/*=============================================
+=            Similar Artists Section            =
+=============================================*/
+#similar-artists {
+  margin-top: 1rem;
+}
+#similar-artists .image-container {
+  width: 6.5rem;
+  height: 6.5rem;
+}
+#similar-artists .play-pause::after {
+  width: 6.5rem;
+  line-height: 6.5rem;
+}
+
+#similar-artists + .navbar-fixed {
+  z-index: 100;
+}
+#similar-artists .dropdown-container {
+  z-index: 150;
+}
+
+/*=====  End of Similar Artists Section  ======*/
 
 /*=============================================
 =            Play Pause hover effect            =
@@ -635,7 +747,7 @@ aside .navbar-fixed .left {
   text-align: center;
   line-height: 8rem;
   color: white;
-  background-color: #80808050;
+  background-color: #0c0c0c50;
   z-index: 5;
   display: none;
 }
@@ -651,7 +763,7 @@ aside .navbar-fixed .left {
 .favourite::after {
   content: "favorite_border";
   font-family: "Material Icons Round";
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 .toggle-button:hover {
   cursor: pointer;
@@ -683,7 +795,7 @@ aside .navbar-fixed .left {
   line-height: 12rem;
 }
 .song .play-pause::after {
-  line-height: 5.2rem;
+  line-height: 4rem;
   font-size: 2rem;
 }
 
@@ -701,9 +813,12 @@ aside .navbar-fixed .left {
   z-index: 20;
   background-color: #282828;
   visibility: hidden;
+  opacity: 0;
+  transition: 0.3s ease-in-out;
 }
 #player:target {
   visibility: visible;
+  opacity: 1;
 }
 #player .container {
   padding-top: 1rem;
@@ -719,7 +834,7 @@ aside .navbar-fixed .left {
 .song-details {
   margin-right: 1rem;
 }
-.song-details p:first-child {
+.song-details marquee {
   font-size: 1.3rem;
   font-weight: 500;
   max-width: 15rem;
@@ -728,6 +843,16 @@ aside .navbar-fixed .left {
   margin-bottom: 1rem;
   overflow: hidden;
   color: white;
+  position: relative;
+}
+.song-details marquee::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #282828 95%);
 }
 .song-details p:last-child {
   font-size: 1rem;
